--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
   "scripts": {
     "test": "jest",
     "build": "tsc",
-    "prestartjs": "npm run build",
-    "startjs": "node ./dist/app.ts",
+    "prestart:js": "npm run build",
+    "start:js": "node ./dist/app.js",
     "dev": "nodemon ./src/app.ts",
     "start": "ts-node ./src/app.ts"
   },
   "author": "Zarif Karim",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "typescript": "^5.2.2",
-    "ts-node": "^10.9.1"
+    "@types/koa": "^2.13.9",
+    "@types/koa-router": "^7.4.5",
+    "nodemon": "^3.0.1"
   },
   "dependencies": {
     "koa": "^2.14.2",
-    "koa-router": "^12.0.0"
+    "koa-router": "^12.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
