--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.3.1",
     "koa": "^2.14.2",
     "koa-router": "^12.0.0",
+    "slonik": "^37.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
